--- a/source/kinema.vcxproj
+++ b/source/kinema.vcxproj
@@ -96,8 +96,10 @@
     <ClCompile Include="File.cpp" />
     <ClCompile Include="UniformBuffer.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
+    <ClCompile Include="Voxel.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Common.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="IndexBuffer.h" />
@@ -105,6 +107,7 @@
     <ClInclude Include="File.h" />
     <ClInclude Include="UniformBuffer.h" />
     <ClInclude Include="VertexBuffer.h" />
+    <ClInclude Include="Voxel.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\test.frag" />
