Add ImGui menu bar

--- a/data/imgui.ini
+++ b/data/imgui.ini
@@ -4,13 +4,18 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=987,54
-Size=553,617
+Pos=680,136
+Size=550,680
 Collapsed=0
 
 [Window][Example: Simple layout]
-Pos=60,60
+Pos=815,132
 Size=500,440
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
 Collapsed=0
 
 [Window][Same title as another window##1]
@@ -28,39 +33,19 @@ Pos=100,300
 Size=247,48
 Collapsed=0
 
-[Window][Example: Documents]
-Pos=60,60
-Size=607,921
-Collapsed=0
-
-[Window][Dear ImGui Metrics/Debugger]
-Pos=60,60
-Size=339,290
-Collapsed=0
-
-[Window][Dear ImGui Style Editor]
-Pos=561,111
-Size=339,902
-Collapsed=0
-
 [Window][Example: Custom rendering]
-Pos=40,328
-Size=485,422
-Collapsed=0
-
-[Window][Example: Auto-resizing window]
-Pos=941,311
-Size=654,445
-Collapsed=0
-
-[Window][Example: Property editor]
 Pos=60,60
-Size=430,450
+Size=485,414
 Collapsed=0
 
-[Window][About Dear ImGui]
-Pos=60,60
-Size=570,109
+[Window][Example: Console]
+Pos=61,60
+Size=520,600
+Collapsed=0
+
+[Window][About]
+Pos=217,396
+Size=212,61
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
