--- a/data/imgui.ini
+++ b/data/imgui.ini
@@ -48,6 +48,11 @@ Pos=217,396
 Size=212,61
 Collapsed=0
 
+[Window][Voxels]
+Pos=60,60
+Size=135,107
+Collapsed=0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
