--- a/data/imgui.ini
+++ b/data/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=680,136
+Pos=956,84
 Size=550,680
 Collapsed=0
 
@@ -39,18 +39,23 @@ Size=485,414
 Collapsed=0
 
 [Window][Example: Console]
-Pos=61,60
+Pos=80,216
 Size=520,600
 Collapsed=0
 
 [Window][About]
-Pos=217,396
+Pos=145,378
 Size=212,61
 Collapsed=0
 
 [Window][Voxels]
-Pos=61,60
+Pos=44,69
 Size=195,140
+Collapsed=0
+
+[Window][Jackson]
+Pos=95,342
+Size=115,54
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
