--- a/data/imgui.ini
+++ b/data/imgui.ini
@@ -1,10 +1,30 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=146,244
 Size=400,400
 Collapsed=0
 
 [Window][Voxels]
-Pos=60,60
-Size=215,163
+Pos=15,34
+Size=295,296
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=618,45
+Size=550,680
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=595,364
+Size=409,172
+Collapsed=0
+
+[Window][Stacked 2]
+Pos=689,414
+Size=226,71
+Collapsed=0
+
+[Window][Peformance]
+Pos=1371,37
+Size=142,65
 Collapsed=0
 
