Add logging, on-screen console, fmt library

--- a/data/imgui.ini
+++ b/data/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Voxels]
-Pos=12,54
+Pos=15,32
 Size=295,388
 Collapsed=0
 
@@ -24,12 +24,22 @@ Size=226,71
 Collapsed=0
 
 [Window][Peformance]
-Pos=1468,47
+Pos=1458,30
 Size=128,65
 Collapsed=0
 
 [Window][Physics]
 Pos=353,73
 Size=95,77
+Collapsed=0
+
+[Window][Example: Console]
+Pos=357,232
+Size=446,531
+Collapsed=0
+
+[Window][Console]
+Pos=1215,106
+Size=371,429
 Collapsed=0
 
